--- a/2021_11_02_Psilocybin_in_Cg.ipynb
+++ b/2021_11_02_Psilocybin_in_Cg.ipynb
@@ -37,6 +37,109 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5f1f8771",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'': ''}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.compartments #no compartment are utilized by the base model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2cce61cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for metabolite in model.metabolites:\n",
+    "    if '_e' in metabolite.id:\n",
+    "        metabolite.compartment='e' #finds the extracellular metabolites, assigns to compartment e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "880cc4ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'': '', 'e': ''}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.compartments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a58582fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for metabolite in model.metabolites:\n",
+    "    if '_c' in metabolite.id:\n",
+    "        metabolite.compartment='c' #finds the cytoplasmic metabolites, assigns to compartment c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b94966bd",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'c': '', 'e': ''}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.compartments #shows that all metabolites are assigned to either c or e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3372c271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for metabolite in model.metabolites:\n",
+    " #   if not metabolite.compartment:\n",
+    "  #      metabolite.compartment='c' #assigns the compartment c to anything that does not have a compartment yet, to remove error in escher and match the code below."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e6a2b705-8428-46b1-b3f8-80876f1eb6fe",
    "metadata": {},
@@ -46,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "f447bb2e-07ad-464f-bd8f-d50151bc91ca",
    "metadata": {},
    "outputs": [],
@@ -71,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "fa392a9a-b070-4f20-a929-5953201bf685",
    "metadata": {},
    "outputs": [],
@@ -95,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "4a154330-5e8b-4583-9755-8fbe8f81bbb8",
    "metadata": {},
    "outputs": [],
@@ -108,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "1ee268ff-9620-4d42-8fb9-954e61a657c6",
    "metadata": {},
    "outputs": [],
@@ -127,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "331a77e0-1ded-4178-b755-4c7a56907978",
    "metadata": {},
    "outputs": [],
@@ -141,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "684f33db-269d-4378-a298-f3b98b1ac2d5",
    "metadata": {},
    "outputs": [],
@@ -155,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "1ad702bd-859c-4397-bb9c-c989c98d578d",
    "metadata": {},
    "outputs": [],
@@ -169,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "fb71402f-4d03-4195-8894-059a69ca57ea",
    "metadata": {},
    "outputs": [],
@@ -183,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "4157e009-5f07-4225-9c95-138b0396ebdc",
    "metadata": {},
    "outputs": [],
@@ -205,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "9dbf585d-09ff-41fa-b2d2-ce1fb5f49122",
    "metadata": {},
    "outputs": [],
@@ -221,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "c02fdf58-75a6-45bd-9310-a73246ecfcfd",
    "metadata": {},
    "outputs": [],
@@ -237,67 +340,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "24cec8bd-bb98-4473-b694-9edeffb2e791",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Metabolite identifier</strong></td><td>tryp_c</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>tryptamine</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x02197fbc8460</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Formula</strong></td><td>C10H12N2</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Compartment</strong></td><td>c</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>In 3 reaction(s)</strong></td><td>\n",
-       "                    DM_tryp_c, CrTdc, psiH</td>\n",
-       "            </tr>\n",
-       "        </table>"
-      ],
-      "text/plain": [
-       "<Metabolite tryp_c at 0x2197fbc8460>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.metabolites.tryp_c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "9c036f33-ec85-4def-9f88-be5107af159a",
    "metadata": {},
    "outputs": [],
    "source": [
     "write_sbml_model(model, \"iCW773_test7_psilocybin.xml\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "faf2acdc-7772-47ed-983d-ed5a34fbe574",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -311,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
