correctly set the type=demand for only our final product

--- a/2021_11_02_Psilocybin_in_Cg.ipynb
+++ b/2021_11_02_Psilocybin_in_Cg.ipynb
@@ -324,23 +324,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c02fdf58-75a6-45bd-9310-a73246ecfcfd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Reaction identifier</strong></td><td>DM_psi_c</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>Psilocybin demand</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x02873443a898</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Stoichiometry</strong></td>\n",
+       "                <td>\n",
+       "                    <p style='text-align:right'>psi_c --></p>\n",
+       "                    <p style='text-align:right'>Psilocybin --></p>\n",
+       "                </td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>GPR</strong></td><td></td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Lower bound</strong></td><td>0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
+       "            </tr>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<Reaction DM_psi_c at 0x2873443a898>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
-    "model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
     "model.add_boundary(model.metabolites.psi_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.amet_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.psii_c, type='demand');"
+    "#model.add_boundary(model.metabolites.amet_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.psii_c, type='demand');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9c036f33-ec85-4def-9f88-be5107af159a",
    "metadata": {},
    "outputs": [],
