some escher development, some optimization line thrown in, phenotype_phase_planestuff

--- a/2021_11_02_Psilocybin_in_Cg.ipynb
+++ b/2021_11_02_Psilocybin_in_Cg.ipynb
@@ -384,6 +384,34 @@
    "source": [
     "write_sbml_model(model, \"iCW773_test7_psilocybin.xml\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3974edea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cobra.io import save_json_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "89251599",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_json_model(model, \"iCW773_For_Escher\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96f93d91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
