--- a/2021_11_02_Psilocybin_in_Cg.ipynb
+++ b/2021_11_02_Psilocybin_in_Cg.ipynb
@@ -217,15 +217,12 @@
    "outputs": [],
    "source": [
     "tryptamine_4_monooxygenase.add_metabolites({tryptamine: -1,\n",
-    "                              model.metabolites.nadph_c: -1, # this is from the CP450 reductase reaction WE THINK?              \n",
+    "                              model.metabolites.nadph_c: -2,           \n",
     "                              model.metabolites.o2_c: -1,\n",
-    "                              model.metabolites.h_c: -2,\n",
     "                              hydroxytryptamine: 1,\n",
-    "                              model.metabolites.nadp_c:1,\n",
+    "                              model.metabolites.nadp_c:2,\n",
     "                              model.metabolites.h2o_c: 1,              \n",
-    "                             })\n",
-    "\n",
-    "#####Check this reaction again regardin the amount of protons!!!!"
+    "                             })"
    ]
   },
   {
@@ -324,60 +321,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "c02fdf58-75a6-45bd-9310-a73246ecfcfd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Reaction identifier</strong></td><td>DM_psi_c</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>Psilocybin demand</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x02873443a898</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Stoichiometry</strong></td>\n",
-       "                <td>\n",
-       "                    <p style='text-align:right'>psi_c --></p>\n",
-       "                    <p style='text-align:right'>Psilocybin --></p>\n",
-       "                </td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>GPR</strong></td><td></td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Lower bound</strong></td><td>0</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
-       "            </tr>\n",
-       "        </table>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<Reaction DM_psi_c at 0x2873443a898>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.psi_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites.amet_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites.psii_c, type='demand');"
+    "model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
+    "model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
+    "model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
+    "model.add_boundary(model.metabolites.psi_c, type='demand') #product\n",
+    "model.add_boundary(model.metabolites.amet_c, type='demand')\n",
+    "model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
+    "model.add_boundary(model.metabolites.psii_c, type='demand');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "9c036f33-ec85-4def-9f88-be5107af159a",
    "metadata": {},
    "outputs": [],
@@ -387,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "3974edea",
    "metadata": {},
    "outputs": [],
@@ -397,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "89251599",
    "metadata": {},
    "outputs": [],
