messed around trying to get media to work

--- a/2021_11_02_Psilocybin_in_Cg.ipynb
+++ b/2021_11_02_Psilocybin_in_Cg.ipynb
@@ -313,10 +313,10 @@
     "model.add_reactions([L_tryptophan_decarboxylase]) #\n",
     "model.add_reactions([tryptamine_4_monooxygenase]) #\n",
     "model.add_reactions([_4_hydroxytryptamine_kinase]) #\n",
-    "model.add_reactions([_4_hydroxytryptamine_kinase2]) #\n",
+    "#model.add_reactions([_4_hydroxytryptamine_kinase2]) #\n",
     "model.add_reactions([psilocybin_synthase]) #\n",
     "model.add_reactions([psilocybin_synthase2]) #\n",
-    "model.add_reactions([pho_or_spon]) #"
+    "#model.add_reactions([pho_or_spon]) #"
    ]
   },
   {
@@ -324,15 +324,52 @@
    "execution_count": 19,
    "id": "c02fdf58-75a6-45bd-9310-a73246ecfcfd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Reaction identifier</strong></td><td>DM_psi_c</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>Psilocybin demand</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x02525be0b9e8</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Stoichiometry</strong></td>\n",
+       "                <td>\n",
+       "                    <p style='text-align:right'>psi_c --></p>\n",
+       "                    <p style='text-align:right'>Psilocybin --></p>\n",
+       "                </td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>GPR</strong></td><td></td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Lower bound</strong></td><td>0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
+       "            </tr>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<Reaction DM_psi_c at 0x2525be0b9e8>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
-    "model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
     "model.add_boundary(model.metabolites.psi_c, type='demand') #product\n",
-    "model.add_boundary(model.metabolites.amet_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.psii_c, type='demand');"
+    "#model.add_boundary(model.metabolites.amet_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.psii_c, type='demand');"
    ]
   },
   {
@@ -352,8 +389,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cobra.io import save_json_model"
+    "#from cobra.io import save_json_model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87ab8aec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -362,7 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_json_model(model, \"iCW773_For_Escher\")"
+    "#save_json_model(model, \"iCW773_For_Escher\")"
    ]
   },
   {
