--- a/2021_11_02_Psilocybin_in_Cg_Exchange_Function.ipynb
+++ b/2021_11_02_Psilocybin_in_Cg_Exchange_Function.ipynb
@@ -355,7 +355,7 @@
        "                <td><strong>Name</strong></td><td>Psilocybin_e exchange</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x011e96f22f28</td>\n",
+       "                <td>0x018a62ed0240</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -373,7 +373,7 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction EX_psi_e at 0x11e96f22f28>"
+       "<Reaction EX_psi_e at 0x18a62ed0240>"
       ]
      },
      "execution_count": 20,
@@ -394,17 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "429be6e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "9c036f33-ec85-4def-9f88-be5107af159a",
    "metadata": {},
    "outputs": [],
