Added Exchange Pathway, ensured correct flux

--- a/2021_11_02_Psilocybin_in_Cg_Exchange_Function.ipynb
+++ b/2021_11_02_Psilocybin_in_Cg_Exchange_Function.ipynb
@@ -329,10 +329,10 @@
     "model.add_reactions([L_tryptophan_decarboxylase]) #\n",
     "model.add_reactions([tryptamine_4_monooxygenase]) #\n",
     "model.add_reactions([_4_hydroxytryptamine_kinase]) #\n",
-    "#model.add_reactions([_4_hydroxytryptamine_kinase2]) #\n",
+    "model.add_reactions([_4_hydroxytryptamine_kinase2]) #\n",
     "model.add_reactions([psilocybin_synthase]) #\n",
     "model.add_reactions([psilocybin_synthase2]) #\n",
-    "#model.add_reactions([pho_or_spon]) #\n",
+    "model.add_reactions([pho_or_spon]) #\n",
     "model.add_reactions([psitransportpathway]) #"
    ]
   },
@@ -343,6 +343,37 @@
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
+    "model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
+    "model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.psi_c, type='demand') #product\n",
+    "model.add_boundary(model.metabolites.psi_e, type='exchange')\n",
+    "model.add_boundary(model.metabolites.amet_c, type='demand')\n",
+    "model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
+    "model.add_boundary(model.metabolites.psii_c, type='demand');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "bffb3d87",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#model.reactions.DM_psi_e.bounds=0,10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6d26b9f9",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -350,22 +381,22 @@
        "\n",
        "        <table>\n",
        "            <tr>\n",
-       "                <td><strong>Reaction identifier</strong></td><td>EX_psi_e</td>\n",
+       "                <td><strong>Reaction identifier</strong></td><td>psitpp</td>\n",
        "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>Psilocybin_e exchange</td>\n",
+       "                <td><strong>Name</strong></td><td></td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x018a62ed0240</td>\n",
+       "                <td>0x01d575a36470</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
-       "                    <p style='text-align:right'>psi_e <=></p>\n",
-       "                    <p style='text-align:right'>Psilocybin_e <=></p>\n",
+       "                    <p style='text-align:right'>h_c + psi_c --> pi_c + psi_e</p>\n",
+       "                    <p style='text-align:right'>H+ + Psilocybin --> Phosphate + Psilocybin_e</p>\n",
        "                </td>\n",
        "            </tr><tr>\n",
        "                <td><strong>GPR</strong></td><td></td>\n",
        "            </tr><tr>\n",
-       "                <td><strong>Lower bound</strong></td><td>-1000.0</td>\n",
+       "                <td><strong>Lower bound</strong></td><td>0.0</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
        "            </tr>\n",
@@ -373,28 +404,121 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction EX_psi_e at 0x18a62ed0240>"
+       "<Reaction psitpp at 0x1d575a36470>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites.psi_c, type='demand') #product\n",
-    "model.add_boundary(model.metabolites.psi_e, type='exchange')\n",
-    "#model.add_boundary(model.metabolites.amet_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites.psii_c, type='demand');"
+    "model.reactions.psitpp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "51c69ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model.reactions.EX_psi_e"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "ee77f2f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Metabolite identifier</strong></td><td>o2_e</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>O2</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x01d57545b7b8</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Formula</strong></td><td>O2</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Compartment</strong></td><td>e</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>In 2 reaction(s)</strong></td><td>\n",
+       "                    EX_o2_e, O2tpp</td>\n",
+       "            </tr>\n",
+       "        </table>"
+      ],
+      "text/plain": [
+       "<Metabolite o2_e at 0x1d57545b7b8>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.metabolites.o2_e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ed4c6bb7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Reaction identifier</strong></td><td>O2tpp</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>o2 transport via diffusion</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x01d5759c4a90</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Stoichiometry</strong></td>\n",
+       "                <td>\n",
+       "                    <p style='text-align:right'>o2_e --> o2_c</p>\n",
+       "                    <p style='text-align:right'>O2 --> O2</p>\n",
+       "                </td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>GPR</strong></td><td></td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Lower bound</strong></td><td>1.44076799999993</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Upper bound</strong></td><td>16.5067783333334</td>\n",
+       "            </tr>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<Reaction O2tpp at 0x1d5759c4a90>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.reactions.O2tpp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "9c036f33-ec85-4def-9f88-be5107af159a",
    "metadata": {},
    "outputs": [],
